@@ -8,10 +8,12 @@
 
 #include <iostream>
 #include <neural++.hpp>
+
+using namespace std;
 using namespace neuralpp;
 
 int main()  {
-	NeuralNet net(2, 2, 1, 0.0005, 10000);
+	NeuralNet net(2, 2, 1, 0.005, 1000);
 
 	cout << "Training in progress - This may take a while...\n";
 	net.train("adder.xml", NeuralNet::file);
